--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <div class="container">
             <div class="row ">
                 <div class=" colme col-sm-4 col-xs-12">
-                    <a href="">CGPI to % Calculator</a>
+                    <a href="projects/cgpi calc/index.html" target="_blank">CGPI to % Calculator</a>
                 </div>
                 <div class=" colme col-sm-4 col-xs-12">
-                        <a href="">Alfa KPO Makeover</a>
+                        <a href="projects/alfa/index.php" target="_blank">Alfa KPO Makeover</a>
                  </div>
                     <div class=" colme col-sm-4 col-xs-12">
-                            <a href="projects/siddhesh/index.html">Shraddha Cottage</a>
+                            <a href="projects/siddhesh/index.html" target="_blank">Shraddha Cottage</a>
                    </div>
                    
             </div>
