--- a/projects/cgpi calc/index.html
+++ b/projects/cgpi calc/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CGPI Converter</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <style>
     body{
         background:#333;
@@ -18,13 +18,13 @@
         padding: 10px;
     }
     .footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 78px;
-  line-height: 60px; /* Vertically center the text there */
-  background-color: #f5f5f5;
+      position: fixed;
+        bottom: 0;
+        width: 100%;
+        /* Set the fixed height of the footer here */
+        height: 78px;
+        line-height: 60px; /* Vertically center the text there */
+        background-color: #f5f5f5;
 }
 
     </style>
