--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <div id="custom_fc_button" style="visibility:hidden;">
 
-  <a id="open_fc_widget" onClick="openWidget()" style="cursor:pointer;"><img id="imageicon" src="../img/logo.jpg" />
+  <a id="open_fc_widget" onClick="openWidget()" style="cursor:pointer;"><img id="imageicon" src="logo.jpg" />
 
   </a>
 </div>
