--- a/index.html
+++ b/index.html
@@ -6,6 +6,47 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Freshchat.io</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Niramit');
+
+
+html,body{
+    margin:0;
+    padding: 0;
+    font-family: 'Niramit', sans-serif;
+
+}
+
+#custom_fc_button{
+    position: fixed;
+    bottom: 10px;
+    right: 40px;
+    background: #134321;
+    border-radius: 3px;
+    padding: 5px;
+    width: 250px;
+    height: 30px;
+    cursor: pointer;
+}
+
+#custom_fc_button img{ 
+    float: left;
+    width:35px;
+    height:35px;
+    border: 5px solid #134321;
+    border-radius: 50%;
+    margin-top:-15px;
+}
+
+#custom_fc_button p{
+    margin-top:1px;
+    text-align: left;
+    margin-left: 60px;
+    color: #e4ebe1;
+    
+    
+}
+    </style>
 </head>
 <body>
     <div id="custom_fc_button" style="visibility:hidden;" >
