--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ html,body{
 </head>
 <body>
     <div id="custom_fc_button" style="visibility:hidden;" >
-       <a  id="open_fc_widget" onClick="openWidget()" style="cursor:pointer;"> <img src="Single logo.jpg" alt="">
+       <a  id="open_fc_widget" onClick="openWidget()" style="cursor:pointer;"> <img src="logo.jpg" alt="mflogo">
         <p>Chat with us</p>
     </a>
     </div>
