--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Freshchat.io</title>
    
     <style>
-        @import url('https://fonts.googleapis.com/css?family=Niramit');
+       @import url('https://fonts.googleapis.com/css?family=Niramit');
 
 
 html,body{
@@ -19,14 +19,16 @@ html,body{
 
 #custom_fc_button{
     position: fixed;
-    bottom: 10px;
+    bottom: 0px;
     right: 40px;
     background: #134321;
-    border-radius: 3px;
+    /* border-radius: 3px; */
     padding: 5px;
     width: 250px;
     height: 30px;
     cursor: pointer;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 #custom_fc_button img{ 
@@ -43,8 +45,6 @@ html,body{
     text-align: left;
     margin-left: 60px;
     color: #e4ebe1;
-    
-    
 }
     </style>
 </head>
