--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <script src="js/main.js"></script>
+    
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/trueno" type="text/css" />
 </head>
 
@@ -24,7 +24,7 @@
                 <ul>
                     <li><a href="https://github.com/girisukinkar"><i class="fab fa-github"></i></a></li>
                     <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                    <li ><a href="#" class="facebook"><i class="fab fa-facebook"></i></a></li>
                 </ul>
             </div>
             <!-- <button>Know More!</button> -->
@@ -86,6 +86,17 @@
         </div>
 
     </div>
+    <!-- The Modal -->
+<div id="myModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <p>I am kinda anti-social but still if you want to befriend me or stalk me<a href="https://www.facebook.com/girish4ever">click here</a></p>
+    </div>
+  
+  </div>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
