Music ball dance

--- a/projects/music/index.html
+++ b/projects/music/index.html
@@ -1,31 +1,38 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Music</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Play Music</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins"
+      rel="stylesheet"
+    />
+  </head>
 
-<div class="app">
-	<header>
-		<h1>GIrish</h1></header>
-<div class="item">
-	<p>lo7 answers
-Apr 1, 2017 - 7 Answers. Try npm install -g typescript@latest . You can also use npm update instead of install, without the latest modifier. This will install the latest typescript version if not already installed, otherwise it will update the current installation to the latest version.</p>
-</div>
-<div class="item">
-	<p>lorem122lorem</p>
-</div>
-<div class="item">
-	<p>lorem1222222222222222222222222222222222222222222222222222222222222222222222</p>
-</div>
-	<div class="item">
-	<p>lorem43333333333333333333344444444444444</p>
-</div><div class="item">
-	<p>lorem 5</p>
-</div>
-<footer>Hello</footer>
-</div>
+  <body>
+    <div class="container">
+      <h1>Animation music</h1>
+      <div class="visual"></div>
 
-</body>
+      <div class="audios">
+        <div class="pad1">
+          <audio src="bubbles.mp3" class="sound"></audio>
+        </div>
+        <div class="pad2">
+          <audio src="clay.mp3" class="sound"></audio>
+        </div>
+        <div class="pad3">
+          <audio src="bottle_pop_3.wav" class="sound"></audio>
+        </div>
+        <div class="pad4">
+          <audio src="bang.wav" class="sound"></audio>
+        </div>
+      </div>
+    </div>
+
+    <script src="main.js"></script>
+  </body>
 </html>
