--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           Working at
           <span
             ><a href="https://www.moneyfront.in" target="_blank"
-              >Moneyfront.in</a
+              >OneLoop.audio</a
             ></span
           >
           as full-stack developer and part-time digital marketer
