--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               >OneLoop.audio</a
             ></span
           >
-          as full-stack developer and part-time digital marketer
+          as full-stack developer 
         </p>
         <a href="https://www.linkedin.com/in/girish-sukinkar/">
           <button class="connect">Connect</button></a
