--- a/js30/drum-kit/index.html
+++ b/js30/drum-kit/index.html
@@ -68,7 +68,10 @@
             audio.currentTime = 0;
             audio.play();
             key.classList.add('playing');
-            key.addEventListener('transitionend', () => key.classList.remove('playing'));
+            key.addEventListener('transitionend', (e) => {
+                if (e.propertyName !== 'transform') return;
+                key.classList.remove('playing')
+            });
         });
     </script>
 
