--- a/index.html
+++ b/index.html
@@ -1,121 +1,116 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Girish Sukinkar | Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css?v0.2" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
 
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Girish Sukinkar | Portfolio</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" type="text/css" media="screen" href="css/main.css?v0.2" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/trueno" type="text/css" />
+  </head>
 
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/trueno" type="text/css" />
-</head>
-
-<body>
-  <div id="introduction">
-    <div class="box">
-      <h2>
-        Hello.<br />
-        <span> I'M GIRISH.</span>
-      </h2>
-      <h4>Full Stack Developer</h4>
-      <p>
-        I ask a lot of questions to solve a single problem. Always curious to
-        know new things around me and adapt to positive environment.
-      </p>
-      <div class="social-icons">
-        <ul>
-          <li>
-            <a href="https://github.com/girisukinkar"><i class="fab fa-github"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-          </li>
-          <li>
-            <a href="#" class="facebook"><i class="fab fa-facebook"></i></a>
-          </li>
-        </ul>
-      </div>
-      <!-- <button>Know More!</button> -->
-    </div>
-  </div>
-  <div class="lines-bg"></div>
-  <div class="skills">
-    <div class="box">
-      <h2>Hire Me</h2>
-      <p>
-        Currently working at
-        <span><a href="https://www.moneyfront.in" target="_blank" style="color:#8e47ff;">OneLoop.audio</a></span>
-        as full-stack developer
-      </p>
-      <a href="https://www.linkedin.com/in/girish-sukinkar/">
-        <button class="connect">Connect</button></a>
-      <a href="Girish Sukinkar Resume.pdf" download>
-        <button class="resume">
-          Resume &nbsp;<i class="fas fa-download"></i></button></a>
-    </div>
-  </div>
-  <h2 class="project-heading">Projects So Far</h2>
-  <div class="projects">
-    <div class="card">
-      <img src="img/cgpi.png" alt="CPGI Calculator" />
-      <div class="card-details">
-        <h2>CGPA to Percentage</h2>
-        <p>Mumbai University CGPA to Percentage Calculator</p>
-
-        <a href="projects/cgpi calc/index.html"><button>&rarr;</button></a>
-      </div>
-    </div>
-    <div class="card">
-      <img src="img/mutualfund.png" alt="Mutual fund app" />
-      <div class="card-details">
-        <h2>Nav History App</h2>
-        <p>Simple NAV of every mutual fund since inception date</p>
-        <a href="projects/mutual-fund/index.html"><button>&rarr;</button></a>
-      </div>
-    </div>
-    <div class="card">
-      <img src="img/cottage.png" alt="Shraddha Cottage" />
-      <div class="card-details">
-        <h2>Shraddha Cottage</h2>
-        <p>Static website made for a friend</p>
-        <a href="projects/siddhesh/index.html"><button>&rarr;</button></a>
-      </div>
-    </div>
-    <div class="card">
-      <img src="img/nik.png" alt="Nikhil Portfolio" />
-      <div class="card-details">
-        <h2>Bio static website</h2>
-        <p>Made a demo website to teach him how to build websites.</p>
-        <a href="projects/Nik Portfolio/index.html"><button>&rarr;</button></a>
-      </div>
-    </div>
-    <div class="card">
-      <img src="img/Jump Music.gif" alt="Nikhil Portfolio" />
-      <div class="card-details">
-        <h2>Jump Music</h2>
+  <body>
+    <div id="introduction">
+      <div class="box">
+        <h2>
+          Hello.<br />
+          <span> I'M GIRISH.</span>
+        </h2>
+        <h4>Full Stack Developer</h4>
         <p>
-          Click on boxes to see the animation. It plays short sound along with
-          color animation. <br>Coded in HTML, CSS , JS
+          I ask a lot of questions to solve a single problem. Always curious to know new things around me and adapt to positive environment.
         </p>
-        <a href="projects/music/index.html"><button>&rarr;</button></a>
+        <div class="social-icons">
+          <ul>
+            <li>
+              <a href="https://github.com/girisukinkar"><i class="fab fa-github"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-linkedin"></i></a>
+            </li>
+            <li>
+              <a href="#" class="facebook"><i class="fab fa-facebook"></i></a>
+            </li>
+          </ul>
+        </div>
+        <!-- <button>Know More!</button> -->
       </div>
     </div>
-  </div>
-  <!-- The Modal -->
-  <div id="myModal" class="modal">
-    <!-- Modal content -->
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <p>
-        I am kinda anti-social but still if you want to befriend me or stalk
-        me <a href="https://www.facebook.com/girish4ever">click here</a>
-      </p>
+    <div class="lines-bg"></div>
+    <div class="skills">
+      <div class="box">
+        <h2>Hire Me</h2>
+        <p>
+          Currently working at
+          <span><a href="https://www.thealchemygroup.co" target="_blank" style="color: #ff6633;">The Alchemy Group</a></span>
+          as Sr. Full-stack developer.<br />
+          Previously worked for OneLoop Audio and Moneyfront
+        </p>
+        <a href="https://www.linkedin.com/in/girish-sukinkar/"> <button class="connect">Connect</button></a>
+        <a href="Girish Sukinkar Resume.pdf" download>
+          <button class="resume">Resume &nbsp;<i class="fas fa-download"></i></button
+        ></a>
+      </div>
     </div>
-  </div>
-  <script src="js/main.js"></script>
-</body>
+    <h2 class="project-heading">Projects So Far</h2>
+    <div class="projects">
+      <div class="card">
+        <img src="img/cgpi.png" alt="CPGI Calculator" />
+        <div class="card-details">
+          <h2>CGPA to Percentage</h2>
+          <p>Mumbai University CGPA to Percentage Calculator</p>
 
+          <a href="projects/cgpi calc/index.html"><button>&rarr;</button></a>
+        </div>
+      </div>
+      <div class="card">
+        <img src="img/mutualfund.png" alt="Mutual fund app" />
+        <div class="card-details">
+          <h2>Nav History App</h2>
+          <p>Simple NAV of every mutual fund since inception date</p>
+          <a href="projects/mutual-fund/index.html"><button>&rarr;</button></a>
+        </div>
+      </div>
+      <div class="card">
+        <img src="img/cottage.png" alt="Shraddha Cottage" />
+        <div class="card-details">
+          <h2>Shraddha Cottage</h2>
+          <p>Static website made for a friend</p>
+          <a href="projects/siddhesh/index.html"><button>&rarr;</button></a>
+        </div>
+      </div>
+      <div class="card">
+        <img src="img/nik.png" alt="Nikhil Portfolio" />
+        <div class="card-details">
+          <h2>Bio static website</h2>
+          <p>Made a demo website to teach him how to build websites.</p>
+          <a href="projects/Nik Portfolio/index.html"><button>&rarr;</button></a>
+        </div>
+      </div>
+      <div class="card">
+        <img src="img/Jump Music.gif" alt="Nikhil Portfolio" />
+        <div class="card-details">
+          <h2>Jump Music</h2>
+          <p>Click on boxes to see the animation. It plays short sound along with color animation. <br />Coded in HTML, CSS , JS</p>
+          <a href="projects/music/index.html"><button>&rarr;</button></a>
+        </div>
+      </div>
+    </div>
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+      <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>I am kinda anti-social but still if you want to befriend me or stalk me <a href="https://www.facebook.com/girish4ever">click here</a></p>
+      </div>
+    </div>
+    <script src="js/main.js"></script>
+  </body>
 </html>
