--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         <h2>Hire Me</h2>
         <p>
           Currently working at
-          <span><a href="https://www.thealchemygroup.co" target="_blank" style="color: #ff6633;">The Alchemy Group</a></span>
+          <span><a href="https://www.thealchemygroup.co" target="_blank" style="color: #ff6633;">Deloitte</a></span>
           as Sr. Full-stack developer.<br />
-          Previously worked for OneLoop Audio and Moneyfront
+          Previously worked for The Alchemy Group, OneLoop Audio and Moneyfront
         </p>
         <a href="https://www.linkedin.com/in/girish-sukinkar/"> <button class="connect">Connect</button></a>
         <a href="Girish Sukinkar Resume.pdf" download>
