--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <p>
         Currently working at
         <span><a href="https://www2.deloitte.com/us/en.html" target="_blank" style="color: #ff6633;">Deloitte</a></span>
-        as Frontend Developer.<br />
+        as Consultant.<br />
         Previously worked for The Alchemy Group, OneLoop Audio and Moneyfront
       </p>
       <a href="https://www.linkedin.com/in/girish-sukinkar/"> <button class="connect">Connect</button></a>
