--- a/index.html
+++ b/index.html
@@ -289,6 +289,31 @@
                 <a href="https://github.com/girisukinkar/girisukinkar.github.io/tree/master/projects/cgpi%20calc" class="underline">View Code</a>
               </div>
             </div>
+            <div class="projects__item">
+              <picture class="projects__picture">
+                <source
+                  media="(min-width: 62.5em)"
+                  srcset="/projects/Powerbank/powerbank.png"
+                />
+                <img
+                  class="projects__image"
+                  src="/projects/Powerbank/powerbank.png"
+                  alt="Cgpi image"
+                  width-="343"
+                  height="253"
+                />
+              </picture>
+              <h3 class="projects__name">Powerbank Calculator</h3>
+              <p class="projects__tags">
+                <span>HTML</span>
+                <span>CSS</span>
+                <span>JavaScript</span>
+              </p>
+              <div class="projects__links">
+                <a href="/projects/Powerbank/index.html" class="underline">View Project</a>
+                <a href="https://github.com/girisukinkar/girisukinkar.github.io/tree/master/projects/Powerbank" class="underline">View Code</a>
+              </div>
+            </div>
           </div>
         </div>
       </section>
